# passage-flex-rust

./: CHANGELOG.md  Cargo.toml  README.md  codemod.sh  generate.sh
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  on-pull-request.yml  release-as.yml  release.yml  un-yank.yml  yank.yml
examples/poem-openapi/: Cargo.toml  README.md
examples/poem-openapi/src/: main.rs
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: AppInfo.md  AppResponse.md  AppleUserSocialConnection.md  AppsApi.md  AuthMethods.md  AuthenticateApi.md  AuthenticateVerifyNonceResponse.md  CreateTransactionAuthenticateRequest.md  CreateTransactionRegisterRequest.md  CreateTransactionResponse.md  ElementCustomization.md  FontFamily.md  GithubUserSocialConnection.md  GoogleUserSocialConnection.md  LayoutConfig.md  Layouts.md  ListDevicesResponse.md  ListPaginatedUsersItem.md  ListPaginatedUsersResponse.md  MagicLinkAuthMethod.md  Model400Error.md  Model401Error.md  Model403Error.md  Model404Error.md  Model409Error.md  Model500Error.md  Nonce.md  OtpAuthMethod.md  PaginatedLinks.md  PasskeysAuthMethod.md  Technologies.md  TransactionsApi.md  TtlDisplayUnit.md  UserDevicesApi.md  UserEventStatus.md  UserInfo.md  UserMetadataField.md  UserMetadataFieldType.md  UserRecentEvent.md  UserResponse.md  (+6 more)
openapi/src/apis/: apps_api.rs  authenticate_api.rs  configuration.rs  transactions_api.rs  user_devices_api.rs  users_api.rs
openapi/src/models/: app_info.rs  app_response.rs  apple_user_social_connection.rs  auth_methods.rs  authenticate_verify_nonce_response.rs  create_transaction_authenticate_request.rs  create_transaction_register_request.rs  create_transaction_response.rs  element_customization.rs  font_family.rs  github_user_social_connection.rs  google_user_social_connection.rs  layout_config.rs  layouts.rs  link.rs  list_devices_response.rs  list_paginated_users_item.rs  list_paginated_users_response.rs  magic_link_auth_method.rs  model_400_error.rs  model_401_error.rs  model_403_error.rs  model_404_error.rs  model_409_error.rs  model_500_error.rs  nonce.rs  otp_auth_method.rs  paginated_links.rs  passkeys_auth_method.rs  technologies.rs  ttl_display_unit.rs  user_event_status.rs  user_info.rs  user_metadata_field.rs  user_metadata_field_type.rs  user_recent_event.rs  user_response.rs  user_social_connections.rs  user_status.rs  web_authn_devices.rs  (+2 more)
src/: auth.rs  error.rs  error_mapper.rs  lib.rs  passage_flex.rs  user.rs
src/models/: app_info.rs  mod.rs  passage_user.rs  user_info.rs
src/openapi/: mod.rs
src/openapi/apis/: apps_api.rs  authenticate_api.rs  configuration.rs  mod.rs  transactions_api.rs  user_devices_api.rs  users_api.rs
src/openapi/models/: app_info.rs  app_response.rs  apple_user_social_connection.rs  auth_methods.rs  authenticate_verify_nonce_response.rs  create_transaction_authenticate_request.rs  create_transaction_register_request.rs  create_transaction_response.rs  element_customization.rs  font_family.rs  github_user_social_connection.rs  google_user_social_connection.rs  layout_config.rs  layouts.rs  link.rs  (+31 more)
src/passage_flex/: test.rs
tests/: passage_flex_tests.rs
