[package]
name = "passage_flex"
version = "0.1.1"
edition = "2021"
authors = ["support@passage.id"]
description = "Provides verification of server-side authentication for applications using Passage Passkey Flex"
homepage = "https://github.com/passageidentity/passage-flex-rust"
repository = "https://github.com/passageidentity/passage-flex-rust"
readme = "README.md"
license = "MIT"

[dependencies]
http = "^1.1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1.5.0"
