[package]
name = "passage_flex"
version = "0.1.3"
edition = "2021"
authors = ["support@passage.id"]
description = "Passkey Flex for Rust - Add passkey authentication to your own Rust authentication flows with Passage by 1Password"
homepage = "https://docs.passage.id/flex"
repository = "https://github.com/passageidentity/passage-flex-rust"
readme = "README.md"
license = "MIT"
include = ["/src", "README.md"]

[dependencies]
http = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
url = "2.5"
uuid = { version = "1.8", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1.5.0"
