[package]
name = "poem-openapi-with-passage-flex"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = "3"
poem-openapi = { version = "5", features = ["swagger-ui"]}
tokio = { version = "1", features = ["full"] }
serde = "1.0"
uuid = "1.10.0"
thiserror = "1.0.63"
passage_flex = { path = "../../" }
http = "1.1.0"
